[gd_scene load_steps=42 format=3 uid="uid://dv3o5vanj3nau"]

[ext_resource type="Script" path="res://Lib/ImageManager/Filter.gd" id="1_24ae5"]
[ext_resource type="Texture2D" uid="uid://dhgdnjxgqsvps" path="res://Resources/Input/icon.png" id="1_euhdx"]
[ext_resource type="Texture2D" uid="uid://bjoo1ysqpudpb" path="res://Resources/Input/icon.tres" id="2_kfym7"]
[ext_resource type="PackedScene" uid="uid://botsv8m86f408" path="res://Lib/ImageManager/filter_img.tscn" id="3_hksme"]
[ext_resource type="Texture2D" uid="uid://bsck5q02v80al" path="res://Resources/Input/1.png" id="4_a1vpt"]
[ext_resource type="Texture2D" uid="uid://xebjuc8sf1mb" path="res://Resources/Input/2.png" id="5_yfsa3"]
[ext_resource type="Texture2D" uid="uid://3gvawbe6vss" path="res://Resources/Input/3.png" id="6_qwuun"]
[ext_resource type="Texture2D" uid="uid://33vkrh5i3t5b" path="res://Resources/Input/4.png" id="7_l5udt"]
[ext_resource type="Texture2D" uid="uid://51k4pwnsdlvp" path="res://Resources/Input/5.png" id="8_qp64j"]
[ext_resource type="Texture2D" uid="uid://dvwm47ubxr51r" path="res://Resources/Input/6.png" id="9_2inj7"]
[ext_resource type="Texture2D" uid="uid://dk267n4r8fiq6" path="res://Resources/Input/7.png" id="10_m1ytq"]
[ext_resource type="Texture2D" uid="uid://c6nhgx74gwcbs" path="res://Resources/Input/8.png" id="11_pssev"]
[ext_resource type="Texture2D" uid="uid://cowcbanlqmaoc" path="res://Resources/Input/9.png" id="12_7fmrb"]
[ext_resource type="Texture2D" uid="uid://c6xauxxirrrps" path="res://Resources/Input/Right.png" id="13_1ai0r"]
[ext_resource type="Texture2D" uid="uid://rg8ko57l24gv" path="res://Resources/Input/Down.png" id="14_sdc7w"]
[ext_resource type="Texture2D" uid="uid://b1nbotml5ep12" path="res://Resources/Input/Enter.png" id="15_jwg17"]
[ext_resource type="Texture2D" uid="uid://cy5uv1iwhbj8v" path="res://Resources/Input/0.png" id="16_b73ke"]
[ext_resource type="Texture2D" uid="uid://bh21eti4lbrct" path="res://Resources/Input/Left.png" id="17_2l31w"]
[ext_resource type="Texture2D" uid="uid://bn5vl6v8qxg37" path="res://Resources/Input/Dpad_Left.png" id="17_a6e07"]
[ext_resource type="Texture2D" uid="uid://ggoutnq0hp1b" path="res://Resources/Input/Dpad_Down.png" id="18_8484k"]
[ext_resource type="Texture2D" uid="uid://cjvpeoc3o8y4n" path="res://Resources/Input/Up.png" id="18_sjpw7"]
[ext_resource type="Texture2D" uid="uid://c0fsxecwhb3e6" path="res://Resources/Input/Dpad_Right.png" id="19_pclfy"]
[ext_resource type="Texture2D" uid="uid://b05f1gtvp0d6v" path="res://Resources/Input/Dpad_UP.png" id="20_rpfo1"]
[ext_resource type="Texture2D" uid="uid://dargsdqe1itiq" path="res://Resources/Input/X.png" id="21_n3tbh"]
[ext_resource type="Texture2D" uid="uid://dutsrvn72fgys" path="res://Resources/Input/Y.png" id="22_8i7p4"]
[ext_resource type="Texture2D" uid="uid://ovx0wufs1fd1" path="res://Resources/Input/A.png" id="23_33df4"]
[ext_resource type="Texture2D" uid="uid://dm4fk5f3q88ac" path="res://Resources/Input/B.png" id="24_7p040"]
[ext_resource type="Texture2D" uid="uid://6mlhos3s4ctj" path="res://Resources/Input/PA.png" id="25_5cxc3"]
[ext_resource type="Texture2D" uid="uid://pxdguwcrbuq8" path="res://Resources/Input/PO.png" id="26_wmti4"]
[ext_resource type="Texture2D" uid="uid://bmay6ywbe6t6h" path="res://Resources/Input/PS.png" id="27_sthhl"]
[ext_resource type="Texture2D" uid="uid://dqmuhee6s3fk7" path="res://Resources/Input/PX.png" id="28_cy4ef"]
[ext_resource type="Texture2D" uid="uid://bctlrds6rj20p" path="res://Resources/Input/L3.png" id="31_ywq5l"]
[ext_resource type="Texture2D" uid="uid://c6733yjs3kslr" path="res://Resources/Input/L1.png" id="32_acyd8"]
[ext_resource type="Texture2D" uid="uid://b1l6pnbr1us2s" path="res://Resources/Input/L2.png" id="33_thxf1"]
[ext_resource type="Texture2D" uid="uid://cx52ddohi2cuk" path="res://Resources/Input/R1.png" id="34_eq61i"]
[ext_resource type="Texture2D" uid="uid://y5e75yplxdo0" path="res://Resources/Input/R2.png" id="35_rnyld"]

[sub_resource type="Theme" id="Theme_a838o"]
default_font_size = 25
MarginContainer/constants/margin_bottom = 20
MarginContainer/constants/margin_left = 20
MarginContainer/constants/margin_right = 20
MarginContainer/constants/margin_top = 20

[sub_resource type="AtlasTexture" id="AtlasTexture_rnmyx"]
atlas = ExtResource("1_euhdx")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_j7xrl"]
atlas = ExtResource("1_euhdx")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ebep"]
atlas = ExtResource("1_euhdx")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jhxfx"]
atlas = ExtResource("1_euhdx")
region = Rect2(16, 0, 16, 16)

[node name="Filter" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_a838o")
script = ExtResource("1_24ae5")

[node name="Filter" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="TipBox" type="HBoxContainer" parent="Filter"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Filter/TipBox"]
layout_mode = 2
text = "Operating mode: "

[node name="Mode" type="OptionButton" parent="Filter/TipBox"]
layout_mode = 2
focus_mode = 1
expand_icon = true
selected = 0
item_count = 3
popup/item_0/text = "Keyborad"
popup/item_0/icon = SubResource("AtlasTexture_rnmyx")
popup/item_1/text = "Joy(default)"
popup/item_1/icon = SubResource("AtlasTexture_j7xrl")
popup/item_1/id = 1
popup/item_2/text = "Joy(Onehand)"
popup/item_2/icon = SubResource("AtlasTexture_1ebep")
popup/item_2/id = 2

[node name="Label2" type="Label" parent="Filter/TipBox"]
layout_mode = 2
text = "Pics per page:"

[node name="Num" type="OptionButton" parent="Filter/TipBox"]
layout_mode = 2
focus_mode = 1

[node name="Help" type="LinkButton" parent="Filter/TipBox"]
layout_mode = 2
text = "Help"

[node name="PathBox" type="HBoxContainer" parent="Filter"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Filter/PathBox"]
layout_mode = 2
text = "Path"

[node name="Path" type="LineEdit" parent="Filter/PathBox"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 1
placeholder_text = "Enter path"

[node name="Enter" type="Button" parent="Filter/PathBox"]
layout_mode = 2
focus_mode = 1
text = "Enter"

[node name="Close" type="Button" parent="Filter/PathBox"]
layout_mode = 2
focus_mode = 1
disabled = true
text = "Close"

[node name="Box" type="MarginContainer" parent="Filter"]
layout_mode = 2
size_flags_vertical = 3

[node name="PicBox" type="HFlowContainer" parent="Filter/Box"]
layout_mode = 2
alignment = 1

[node name="FilterIMG1" parent="Filter/Box/PicBox" instance=ExtResource("3_hksme")]
visible = false
layout_mode = 2

[node name="FilterIMG2" parent="Filter/Box/PicBox" instance=ExtResource("3_hksme")]
visible = false
layout_mode = 2

[node name="FilterIMG3" parent="Filter/Box/PicBox" instance=ExtResource("3_hksme")]
visible = false
layout_mode = 2

[node name="FilterIMG4" parent="Filter/Box/PicBox" instance=ExtResource("3_hksme")]
visible = false
layout_mode = 2

[node name="FilterIMG5" parent="Filter/Box/PicBox" instance=ExtResource("3_hksme")]
visible = false
layout_mode = 2

[node name="FilterIMG6" parent="Filter/Box/PicBox" instance=ExtResource("3_hksme")]
visible = false
layout_mode = 2

[node name="FilterIMG7" parent="Filter/Box/PicBox" instance=ExtResource("3_hksme")]
visible = false
layout_mode = 2

[node name="FilterIMG8" parent="Filter/Box/PicBox" instance=ExtResource("3_hksme")]
visible = false
layout_mode = 2

[node name="FilterIMG9" parent="Filter/Box/PicBox" instance=ExtResource("3_hksme")]
visible = false
layout_mode = 2

[node name="TipBox" type="ScrollContainer" parent="Filter/Box"]
visible = false
layout_mode = 2
horizontal_scroll_mode = 0

[node name="TipBox2" type="VBoxContainer" parent="Filter/Box/TipBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Keyborad1" type="HBoxContainer" parent="Filter/Box/TipBox/TipBox2"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Filter/Box/TipBox/TipBox2/Keyborad1"]
layout_mode = 2
texture = ExtResource("2_kfym7")
expand_mode = 3

[node name="Label" type="Label" parent="Filter/Box/TipBox/TipBox2/Keyborad1"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 1, 1)
text = "Keyborad"

[node name="Keyborad2" type="Label" parent="Filter/Box/TipBox/TipBox2"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
text = "You can use the following buttons to move the images to the \"remove\" folder and filter the training set:"
vertical_alignment = 1
autowrap_mode = 2

[node name="Keyborad3" type="HFlowContainer" parent="Filter/Box/TipBox/TipBox2"]
layout_mode = 2

[node name="TextureRect1" type="TextureRect" parent="Filter/Box/TipBox/TipBox2/Keyborad3"]
layout_mode = 2
texture = ExtResource("4_a1vpt")

[node name="TextureRect2" type="TextureRect" parent="Filter/Box/TipBox/TipBox2/Keyborad3"]
layout_mode = 2
texture = ExtResource("5_yfsa3")

[node name="TextureRect3" type="TextureRect" parent="Filter/Box/TipBox/TipBox2/Keyborad3"]
layout_mode = 2
texture = ExtResource("6_qwuun")

[node name="TextureRect4" type="TextureRect" parent="Filter/Box/TipBox/TipBox2/Keyborad3"]
layout_mode = 2
texture = ExtResource("7_l5udt")

[node name="TextureRect5" type="TextureRect" parent="Filter/Box/TipBox/TipBox2/Keyborad3"]
layout_mode = 2
texture = ExtResource("8_qp64j")

[node name="TextureRect6" type="TextureRect" parent="Filter/Box/TipBox/TipBox2/Keyborad3"]
layout_mode = 2
texture = ExtResource("9_2inj7")

[node name="TextureRect7" type="TextureRect" parent="Filter/Box/TipBox/TipBox2/Keyborad3"]
layout_mode = 2
texture = ExtResource("10_m1ytq")

[node name="TextureRect8" type="TextureRect" parent="Filter/Box/TipBox/TipBox2/Keyborad3"]
layout_mode = 2
texture = ExtResource("11_pssev")

[node name="TextureRect9" type="TextureRect" parent="Filter/Box/TipBox/TipBox2/Keyborad3"]
layout_mode = 2
texture = ExtResource("12_7fmrb")

[node name="Keyborad4" type="Label" parent="Filter/Box/TipBox/TipBox2"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
text = "You can use the following buttons to view the next set of pictures:"
vertical_alignment = 1
autowrap_mode = 2

[node name="Keyborad5" type="HFlowContainer" parent="Filter/Box/TipBox/TipBox2"]
layout_mode = 2

[node name="Label" type="Label" parent="Filter/Box/TipBox/TipBox2/Keyborad5"]
layout_mode = 2
text = "Next"

[node name="TextureRect1" type="TextureRect" parent="Filter/Box/TipBox/TipBox2/Keyborad5"]
layout_mode = 2
texture = ExtResource("13_1ai0r")

[node name="TextureRect2" type="TextureRect" parent="Filter/Box/TipBox/TipBox2/Keyborad5"]
layout_mode = 2
texture = ExtResource("14_sdc7w")

[node name="TextureRect3" type="TextureRect" parent="Filter/Box/TipBox/TipBox2/Keyborad5"]
layout_mode = 2
texture = ExtResource("15_jwg17")

[node name="TextureRect4" type="TextureRect" parent="Filter/Box/TipBox/TipBox2/Keyborad5"]
layout_mode = 2
texture = ExtResource("16_b73ke")

[node name="Label2" type="Label" parent="Filter/Box/TipBox/TipBox2/Keyborad5"]
layout_mode = 2
text = "Previous"

[node name="TextureRect5" type="TextureRect" parent="Filter/Box/TipBox/TipBox2/Keyborad5"]
layout_mode = 2
texture = ExtResource("17_2l31w")

[node name="TextureRect6" type="TextureRect" parent="Filter/Box/TipBox/TipBox2/Keyborad5"]
layout_mode = 2
texture = ExtResource("18_sjpw7")

[node name="JoyStick1" type="HBoxContainer" parent="Filter/Box/TipBox/TipBox2"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Filter/Box/TipBox/TipBox2/JoyStick1"]
layout_mode = 2
texture = SubResource("AtlasTexture_jhxfx")
expand_mode = 3

[node name="Label" type="Label" parent="Filter/Box/TipBox/TipBox2/JoyStick1"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
text = "JoyStick(default)"

[node name="JoyStick2" type="Label" parent="Filter/Box/TipBox/TipBox2"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
text = "Move the images to the \"remove\" folder and filter the training set:"
vertical_alignment = 1
autowrap_mode = 1

[node name="JoyStick3" type="HFlowContainer" parent="Filter/Box/TipBox/TipBox2"]
layout_mode = 2

[node name="TextureRect1" type="TextureRect" parent="Filter/Box/TipBox/TipBox2/JoyStick3"]
layout_mode = 2
texture = ExtResource("17_a6e07")

[node name="TextureRect4" type="TextureRect" parent="Filter/Box/TipBox/TipBox2/JoyStick3"]
layout_mode = 2
texture = ExtResource("20_rpfo1")

[node name="TextureRect2" type="TextureRect" parent="Filter/Box/TipBox/TipBox2/JoyStick3"]
layout_mode = 2
texture = ExtResource("18_8484k")

[node name="TextureRect3" type="TextureRect" parent="Filter/Box/TipBox/TipBox2/JoyStick3"]
layout_mode = 2
texture = ExtResource("19_pclfy")

[node name="TextureRect5" type="TextureRect" parent="Filter/Box/TipBox/TipBox2/JoyStick3"]
layout_mode = 2
texture = ExtResource("21_n3tbh")

[node name="TextureRect6" type="TextureRect" parent="Filter/Box/TipBox/TipBox2/JoyStick3"]
layout_mode = 2
texture = ExtResource("22_8i7p4")

[node name="TextureRect7" type="TextureRect" parent="Filter/Box/TipBox/TipBox2/JoyStick3"]
layout_mode = 2
texture = ExtResource("23_33df4")

[node name="TextureRect8" type="TextureRect" parent="Filter/Box/TipBox/TipBox2/JoyStick3"]
layout_mode = 2
texture = ExtResource("24_7p040")

[node name="Label" type="Label" parent="Filter/Box/TipBox/TipBox2/JoyStick3"]
layout_mode = 2
text = "OR ("

[node name="TextureRect11" type="TextureRect" parent="Filter/Box/TipBox/TipBox2/JoyStick3"]
layout_mode = 2
texture = ExtResource("27_sthhl")

[node name="TextureRect9" type="TextureRect" parent="Filter/Box/TipBox/TipBox2/JoyStick3"]
layout_mode = 2
texture = ExtResource("25_5cxc3")

[node name="TextureRect12" type="TextureRect" parent="Filter/Box/TipBox/TipBox2/JoyStick3"]
layout_mode = 2
texture = ExtResource("28_cy4ef")

[node name="TextureRect10" type="TextureRect" parent="Filter/Box/TipBox/TipBox2/JoyStick3"]
layout_mode = 2
texture = ExtResource("26_wmti4")

[node name="Label2" type="Label" parent="Filter/Box/TipBox/TipBox2/JoyStick3"]
layout_mode = 2
text = ")"

[node name="JoyStick4" type="Label" parent="Filter/Box/TipBox/TipBox2"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
text = "View the next and previous set of pictures:"
vertical_alignment = 1
autowrap_mode = 1

[node name="JoyStick5" type="HFlowContainer" parent="Filter/Box/TipBox/TipBox2"]
layout_mode = 2

[node name="TextureRect1" type="TextureRect" parent="Filter/Box/TipBox/TipBox2/JoyStick5"]
layout_mode = 2
texture = ExtResource("31_ywq5l")

[node name="Label" type="Label" parent="Filter/Box/TipBox/TipBox2/JoyStick5"]
layout_mode = 2
text = "Next"

[node name="TextureRect4" type="TextureRect" parent="Filter/Box/TipBox/TipBox2/JoyStick5"]
layout_mode = 2
texture = ExtResource("34_eq61i")

[node name="TextureRect5" type="TextureRect" parent="Filter/Box/TipBox/TipBox2/JoyStick5"]
layout_mode = 2
texture = ExtResource("35_rnyld")

[node name="Label2" type="Label" parent="Filter/Box/TipBox/TipBox2/JoyStick5"]
layout_mode = 2
text = "Previous"

[node name="TextureRect2" type="TextureRect" parent="Filter/Box/TipBox/TipBox2/JoyStick5"]
layout_mode = 2
texture = ExtResource("32_acyd8")

[node name="TextureRect3" type="TextureRect" parent="Filter/Box/TipBox/TipBox2/JoyStick5"]
layout_mode = 2
texture = ExtResource("33_thxf1")

[node name="JoyStick6" type="HBoxContainer" parent="Filter/Box/TipBox/TipBox2"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Filter/Box/TipBox/TipBox2/JoyStick6"]
layout_mode = 2
texture = SubResource("AtlasTexture_jhxfx")
expand_mode = 3

[node name="Label" type="Label" parent="Filter/Box/TipBox/TipBox2/JoyStick6"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
text = "JoyStick(one hand)"

[node name="JoyStick7" type="Label" parent="Filter/Box/TipBox/TipBox2"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
text = "Move the images to the \"remove\" folder and filter the training set:"
vertical_alignment = 1
autowrap_mode = 1

[node name="JoyStick8" type="HFlowContainer" parent="Filter/Box/TipBox/TipBox2"]
layout_mode = 2

[node name="TextureRect1" type="TextureRect" parent="Filter/Box/TipBox/TipBox2/JoyStick8"]
layout_mode = 2
texture = ExtResource("17_a6e07")

[node name="TextureRect4" type="TextureRect" parent="Filter/Box/TipBox/TipBox2/JoyStick8"]
layout_mode = 2
texture = ExtResource("20_rpfo1")

[node name="TextureRect2" type="TextureRect" parent="Filter/Box/TipBox/TipBox2/JoyStick8"]
layout_mode = 2
texture = ExtResource("18_8484k")

[node name="TextureRect3" type="TextureRect" parent="Filter/Box/TipBox/TipBox2/JoyStick8"]
layout_mode = 2
texture = ExtResource("19_pclfy")

[node name="TextureRect5" type="TextureRect" parent="Filter/Box/TipBox/TipBox2/JoyStick8"]
layout_mode = 2
texture = ExtResource("21_n3tbh")

[node name="TextureRect6" type="TextureRect" parent="Filter/Box/TipBox/TipBox2/JoyStick8"]
layout_mode = 2
texture = ExtResource("22_8i7p4")

[node name="TextureRect7" type="TextureRect" parent="Filter/Box/TipBox/TipBox2/JoyStick8"]
layout_mode = 2
texture = ExtResource("23_33df4")

[node name="TextureRect8" type="TextureRect" parent="Filter/Box/TipBox/TipBox2/JoyStick8"]
layout_mode = 2
texture = ExtResource("24_7p040")

[node name="Label" type="Label" parent="Filter/Box/TipBox/TipBox2/JoyStick8"]
layout_mode = 2
text = "OR ("

[node name="TextureRect11" type="TextureRect" parent="Filter/Box/TipBox/TipBox2/JoyStick8"]
layout_mode = 2
texture = ExtResource("27_sthhl")

[node name="TextureRect9" type="TextureRect" parent="Filter/Box/TipBox/TipBox2/JoyStick8"]
layout_mode = 2
texture = ExtResource("25_5cxc3")

[node name="TextureRect12" type="TextureRect" parent="Filter/Box/TipBox/TipBox2/JoyStick8"]
layout_mode = 2
texture = ExtResource("28_cy4ef")

[node name="TextureRect10" type="TextureRect" parent="Filter/Box/TipBox/TipBox2/JoyStick8"]
layout_mode = 2
texture = ExtResource("26_wmti4")

[node name="Label2" type="Label" parent="Filter/Box/TipBox/TipBox2/JoyStick8"]
layout_mode = 2
text = ")"

[node name="JoyStick9" type="Label" parent="Filter/Box/TipBox/TipBox2"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
text = "View the next and previous set of pictures:"
vertical_alignment = 1
autowrap_mode = 1

[node name="JoyStick10" type="HFlowContainer" parent="Filter/Box/TipBox/TipBox2"]
layout_mode = 2

[node name="Label" type="Label" parent="Filter/Box/TipBox/TipBox2/JoyStick10"]
layout_mode = 2
text = "Next"

[node name="TextureRect2" type="TextureRect" parent="Filter/Box/TipBox/TipBox2/JoyStick10"]
layout_mode = 2
texture = ExtResource("33_thxf1")

[node name="TextureRect3" type="TextureRect" parent="Filter/Box/TipBox/TipBox2/JoyStick10"]
layout_mode = 2
texture = ExtResource("35_rnyld")

[node name="Label2" type="Label" parent="Filter/Box/TipBox/TipBox2/JoyStick10"]
layout_mode = 2
text = "Previous"

[node name="TextureRect4" type="TextureRect" parent="Filter/Box/TipBox/TipBox2/JoyStick10"]
layout_mode = 2
texture = ExtResource("32_acyd8")

[node name="TextureRect5" type="TextureRect" parent="Filter/Box/TipBox/TipBox2/JoyStick10"]
layout_mode = 2
texture = ExtResource("34_eq61i")

[connection signal="item_selected" from="Filter/TipBox/Mode" to="." method="_on_mode_item_selected"]
[connection signal="item_selected" from="Filter/TipBox/Num" to="." method="_on_num_item_selected"]
[connection signal="pressed" from="Filter/TipBox/Help" to="." method="_on_help_pressed"]
[connection signal="pressed" from="Filter/PathBox/Enter" to="." method="_on_enter_pressed"]
[connection signal="pressed" from="Filter/PathBox/Close" to="." method="_on_close_pressed"]
